Project styles and with each item

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -10,6 +10,9 @@
 *::after{
     box-sizing: border-box;
 }
+img{
+    max-width: 100%;
+}
 body{
     margin: 0;
     padding: 0;
@@ -22,13 +25,13 @@ h1,h2,h3,h4{
 .container{
     max-width: 1000px;
     margin: 0 auto;
+    padding: 2rem 0;
 }
 /*--Header--*/
 .main-header{
     height: 100vh;
     background-color: var(--primary-color);
     color: #fff;
-    padding-top: 1.3rem;
 }
 .main-icon{
     overflow: hidden;
@@ -94,4 +97,95 @@ h1,h2,h3,h4{
 }
 .presentation .hightlight{
     color: rgb(228, 192, 33);
+}
+.title-container{
+    border-bottom: 1px solid black;
+    padding-bottom: 2px;
+}
+.title{
+    font-family: 'Exo 2', sans-serif;
+    text-align: center;
+    font-size: 2em;
+}
+.project-list{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap:1rem ;
+}
+.project-item{
+    flex: 1 1 33.3%;
+    box-shadow: 1px 3px 8px gray;
+    padding: 1rem;
+}
+/*Tags styles*/
+.project-tags ul{
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    padding-left: 0;
+}
+.tags{
+    padding: 2px 5px;
+    border: 2px solid black;
+    font-weight: bolder;
+    border-radius: 15px;
+    margin: 0 5px 5px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+.html{
+    border-color: #e54c21;
+    color: #e54c21;
+}
+.css{
+    border-color: rgb(0, 110, 255);
+    color: rgb(0, 110, 255);
+}
+
+.js{
+    border-color: rgb(255, 208, 0);
+    color: rgb(255, 208, 0);
+}
+.php{
+    border-color: rgb(89, 0, 255);
+    color: rgb(89, 0, 255);
+}
+
+.db{
+    border-color: #255278;
+    color: #255278;
+}
+
+.django{
+    border-color: #0C4B33;
+    color: #0C4B33;
+}
+.laravel{
+    border-color: rgb(255, 45, 32);
+    color: rgb(255, 45, 32);
+}
+.python{
+    border-color: #4382b3;
+    color: #4382b3;
+}
+.c-sharp{
+    border-color: #671473;
+    color: #671473;
+}
+.java{
+    border-color: #0070b7;
+    color: #0070b7;
+}
+.btn-more a{
+    text-decoration: none;
+    color: white;
+}
+.btn-more{
+    background-color: rgb(14, 150, 14);
+    font-weight: bolder;
+    border-radius: 15px;
+    padding: .8rem 2rem;
+    text-align: center;
 }
