--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -103,6 +103,12 @@ body {
     color: black !important;
     border-radius: 30px;
   }
+  .width-dropdown{
+    width: 130px;
+  }
+  .width-dropdown button{
+    width: 100%;
+  }
   .purple {
     color: rgb(219, 0, 219);
   }
@@ -168,6 +174,8 @@ body {
     color: black!important;
   }
   .project-link {
+    width: 300px;
+    text-align: center;
     display: inline-block;
     padding: 0.6rem 1.2rem;
     border-radius: 20px;
@@ -178,8 +186,38 @@ body {
     color: white;
     background-color: greenyellow;
   }
+  .project-link-desc{
+    width:185px
+  }
   .shadow {
     box-shadow: 0 2rem 3rem rgb(0, 0, 0) !important;
+  }
+  .gallery{
+    cursor: pointer;
+    position: relative;
+    transition: .4s ease-in-out;
+  }
+  .gallery-overlay{
+    top: 0;
+    left: 0;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color:rgba(0, 0, 0, 0.589);
+    display: grid;
+    place-content: center;
+    opacity: 0;
+    transition: .4s ease-in-out;
+  }
+  .gallery:hover .gallery-overlay{
+    opacity: 1;
+  }
+  .gallery-button{
+    background-color: white;
+    border-radius: 30px;
+    font-size:1.3rem;
+    padding:.4rem 1rem;
+    color: #000
   }
   .text-tech {
     font-weight: 600;
