--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -98,10 +98,12 @@ body {
   .rounded-custom {
     border-radius: 20px;
   }
-  .link.active {
+  .active-link {
     background-color: white;
     color: black !important;
-    border-radius: 30px;
+  }
+  .nav-link{
+    border-radius: 10px;
   }
   .width-dropdown{
     width: 130px;
