--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -74,11 +74,14 @@ body {
   .header-navbar {
     height: fit-content;
     width: 100%;
-    background-color: #11171d;
     right: 15px;
     display: flex;
     justify-content: flex-end;
     padding: 10px 0;
+    transition: .4s ease-in-out;
+  }
+  .header-offset {
+    background-color: #000e27;
   }
   .info {
     z-index: 100;
@@ -89,11 +92,12 @@ body {
   .border-custom {
     border-color: greenyellow !important;
   }
-  .link {
+  .nav-link {
     color: white !important;
     text-decoration: none;
     font-weight: bold;
     padding: 10px 20px;
+    font-size: 1.1rem;
   }
   .rounded-custom {
     border-radius: 20px;
@@ -170,6 +174,12 @@ body {
     text-align: center;
     border-radius: 30px;
     transition: .6s ease-in-out;
+  }
+  .footer-link{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size:1.3rem;
   }
   .footer-link:hover{
     background-color:white;
@@ -260,6 +270,7 @@ body {
   }
   .bg-footer {
     background-color: #1e2833;
+    row-gap: 4rem;
   }
   .bg-footer-secondary {
     background-color: #11171d;
