--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -185,7 +185,11 @@ body {
     background-color:white;
     color: black!important;
   }
+  /* .project-links{
+    overflow:scroll;
+  } */
   .project-link {
+    max-width: 100%;
     width: 395px;
     text-align: center;
     display: inline-block;
