--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,282 +1,380 @@
+html{
+  box-sizing: border-box;
+}
+*,*::before,*::after{
+  box-sizing: inherit;
+}
 body {
-    min-height: 100vh;
-  }
-  img.img-profile {
-    max-width: 270px;
-    border: 4px dashed rgb(0, 219, 183);
-  }
+  min-height: 100vh;
   
-  @keyframes spin { 
-    100% { 
-      transform: rotateZ(360deg);
-    }
+}
+
+img.img-profile {
+  max-width: 270px;
+  border: 4px dashed rgb(0, 219, 183);
+}
+
+@keyframes spin {
+  100% {
+    transform: rotateZ(360deg);
   }
-  
-  /*=========Text typing==========*/
-  .text-typing {
-    padding: 10px 20px 10px 0;
-    font-size: 35px;
-    font-family: monospace;
-    width: fit-content;
+}
+
+/*=========Text typing==========*/
+.text-typing {
+  padding: 10px 20px 10px 0;
+  font-size: 35px;
+  font-family: monospace;
+  width: fit-content;
+}
+
+.text-typing h1 {
+  margin: 0px;
+  white-space: nowrap;
+  overflow: hidden;
+  animation: typing 4s steps(22, end) forwards, blink .6s infinite;
+}
+
+@keyframes typing {
+  0% {
+    width: 0%;
   }
-  .text-typing h1{
-    margin: 0px;
-    white-space: nowrap;
-    overflow: hidden;
-    animation: typing 4s steps(22, end) forwards, blink .6s infinite;
+
+  100% {
+    width: 100%;
   }
-  @keyframes typing {
-    0% {
-      width: 0%;
-    }
-    100% {
-      width: 100%;
-    }
+}
+
+@keyframes blink {
+
+  0%,
+  100% {
+    border-right: 2px solid transparent;
   }
-  @keyframes blink {
-    0%,
-    100% {
-      border-right: 2px solid transparent;
-    }
-    50% {
-      border-right: 2px solid rgb(189, 192, 0);
-    }
+
+  50% {
+    border-right: 2px solid rgb(189, 192, 0);
   }
-  
-  /*=========Header==========*/
+}
+
+/*=========Header==========*/
+.banner {
+  min-height: 100vh;
+  height: 100vh;
+  background-color: var(--primary-color);
+  color: #fff;
+  background-image: url("../images/banner.jpg");
+
+  background-position: fixed;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  position: relative;
+}
+
+@media (max-width: 992px) {
   .banner {
-    min-height: 100vh;
-    height: 100vh;
-    background-color: var(--primary-color);
-    color: #fff;
-    background-image: url("../images/banner.jpg");
-  
-    background-position: fixed;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    position: relative;
+    height: auto;
   }
-  @media (max-width: 992px){
-      .banner{
-          height: auto;
-      }
-  }
-  .banner::after {
-    content: "";
-    background-color: rgba(0, 0, 0, 0.8);
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-  }
-  .header-navbar {
-    height: fit-content;
-    width: 100%;
-    right: 15px;
-    display: flex;
-    justify-content: flex-end;
-    padding: 10px 0;
-    transition: .4s ease-in-out;
-  }
-  .header-offset {
-    background-color: #000e27;
-  }
-  .info {
-    z-index: 100;
-  }
-  .text-custom {
-    color: rgb(55, 148, 255) !important;
-  }
-  .border-custom {
-    border-color: greenyellow !important;
-  }
-  .nav-link {
-    color: white !important;
-    text-decoration: none;
-    font-weight: bold;
-    padding: 10px 20px;
-    font-size: 1.1rem;
-  }
-  .rounded-custom {
-    border-radius: 20px;
-  }
-  .active-link {
-    background-color: white;
-    color: black !important;
-  }
-  .nav-link{
-    border-radius: 10px;
-  }
-  .width-dropdown{
-    width: 130px;
-  }
-  .width-dropdown button{
-    width: 100%;
-  }
-  .purple {
-    color: rgb(219, 0, 219);
-  }
-  .string {
-    color: greenyellow;
-  }
-  .title-container {
-    margin: 2rem 0;
-    background-image: url("../images/banner.jpg");
-    background-attachment: fixed;
-    height: 100%;
-    position: relative;
-  }
-  .title-container::before {
-    content: "";
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
-  }
-  .title {
-    color: #fff;
-    text-align: center;
-    padding: 10px;
-    border-left: 10px solid var(--bs-primary);
-    border-right: 10px solid var(--bs-primary);
-    position: relative;
-    z-index: 10;
-  }
-  .skill-item{
-    display: flex;
-    justify-content:center;
-    align-items:center;
-  }
-  .skill-img{
-    width: fit-content;
-    height: 60px;
-    text-align: left;
-  }
-  .tech-skills {
-    width: fit-content;
-    height: 120px;
-    text-align: left;
-  }
-  .tech-img {
-    height: 100px;
-    text-align: left;
-  }
-  .border-bottom:last-of-type {
-    border-bottom: none !important;
-  }
-  .link {
-    text-decoration: none;
-    font-weight: 300;
-    text-align: center;
-    border-radius: 30px;
-    transition: .6s ease-in-out;
-  }
-  .footer-link{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size:1.3rem;
-  }
-  .footer-link:hover{
-    background-color:white;
-    color: black!important;
-  }
-  /* .project-links{
+}
+
+.banner::after {
+  content: "";
+  background-color: rgba(0, 0, 0, 0.8);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.header-navbar {
+  height: fit-content;
+  width: 100%;
+  right: 15px;
+  display: flex;
+  justify-content: flex-end;
+  padding: 10px 0;
+  transition: .4s ease-in-out;
+}
+
+.header-offset {
+  background-color: #000e27;
+}
+
+.info {
+  z-index: 100;
+}
+
+.text-custom {
+  color: rgb(55, 148, 255) !important;
+}
+
+.border-custom {
+  border-color: greenyellow !important;
+}
+
+.nav-link {
+  color: white !important;
+  text-decoration: none;
+  font-weight: bold;
+  padding: 10px 20px;
+  font-size: 1.1rem;
+}
+
+.rounded-custom {
+  border-radius: 20px;
+}
+
+.active-link {
+  background-color: white;
+  color: black !important;
+}
+
+.nav-link {
+  border-radius: 10px;
+}
+
+.width-dropdown {
+  width: 130px;
+}
+
+.width-dropdown button {
+  width: 100%;
+}
+
+.purple {
+  color: rgb(219, 0, 219);
+}
+
+.string {
+  color: greenyellow;
+}
+
+.title-container {
+  margin: 2rem 0;
+  background-image: url("../images/banner.jpg");
+  background-attachment: fixed;
+  height: 100%;
+  position: relative;
+}
+
+.title-container::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+.title {
+  color: #fff;
+  text-align: center;
+  padding: 10px;
+  border-left: 10px solid var(--bs-primary);
+  border-right: 10px solid var(--bs-primary);
+  position: relative;
+  z-index: 10;
+}
+
+.skill-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.skill-img {
+  width: fit-content;
+  height: 60px;
+  text-align: left;
+}
+
+.tech-skills {
+  width: fit-content;
+  height: 120px;
+  text-align: left;
+}
+
+.tech-img {
+  height: 100px;
+  text-align: left;
+}
+
+.border-bottom:last-of-type {
+  border-bottom: none !important;
+}
+
+.link {
+  text-decoration: none;
+  font-weight: 300;
+  text-align: center;
+  border-radius: 30px;
+  transition: .6s ease-in-out;
+}
+
+.banner-link {
+  display: inline-block !important;
+  width: 35px;
+  height: 35px;
+  border-radius: 100%;
+  font-size: 25px;
+  text-align: center;
+  background-color: white;
+  transition: .3s ease-in-out;
+  padding: 1.3rem;
+  border: 1px solid #fff;
+}
+
+.banner-link a {
+  display: grid !important;
+  place-content: center;
+  width: 100%;
+  height: 100%;
+}
+
+.banner-link i {
+  transition: .3s ease-in-out;
+  color: #000;
+  height: fit-content;
+}
+
+.banner-link:hover {
+  background-color: transparent;
+}
+
+.banner-link:hover i {
+  /* background-color: red; */
+  /* color: #0a66c2; */
+  /* color: #e54033; */
+  color: #fff;
+}
+
+.footer-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.3rem;
+}
+
+.footer-link:hover {
+  background-color: white;
+  color: black !important;
+}
+
+/* .project-links{
     overflow:scroll;
   } */
-  .project-link {
-    max-width: 100%;
-    width: 395px;
-    text-align: center;
-    display: inline-block;
-    padding: 0.6rem 1.2rem;
-    border-radius: 20px;
-    color: white;
-    text-decoration: underline;
-  }
-  .project-link:hover {
-    color: white;
-    background-color: greenyellow;
-  }
-  .project-link-desc{
-    width:174px
-  }
-  .shadow {
-    box-shadow: 0 2rem 3rem rgb(0, 0, 0) !important;
-  }
-  .gallery{
-    cursor: pointer;
-    position: relative;
-    transition: .4s ease-in-out;
-  }
-  .gallery-overlay{
-    top: 0;
-    left: 0;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color:rgba(0, 0, 0, 0.589);
-    display: grid;
-    place-content: center;
-    opacity: 0;
-    transition: .4s ease-in-out;
-  }
-  .gallery:hover .gallery-overlay{
-    opacity: 1;
-  }
-  .gallery-button{
-    background-color: white;
-    border-radius: 30px;
-    font-size:1.3rem;
-    padding:.4rem 1rem;
-    color: #000
-  }
-  .text-tech {
-    font-weight: 600;
-    font-size: 30px;
-  }
-  .text-laravel {
-    color: #ff2d20;
-  }
-  .text-spring {
-    color: #77bc1f;
-  }
-  .text-java {
-    color: #ea2d2e;
-  }
-  .text-mysql {
-    color: #e39410;
-  }
-  .text-postgresql {
-    color: #336791;
-  }
-  .text-django {
-    color: #092e20;
-  }
-  .text-php {
-    color: #222433;
-  }
-  .text-bootstrap {
-    color: #7912f6;
-  }
-  .text-html{
-    color: #ff5722;
-  }
-  .text-css{
-    color: #2196f3;
-  }
-  .text-js{
-    color: #f7e018;
-  }
-  .bg-footer {
-    background-color: #1e2833;
-    row-gap: 4rem;
-  }
-  .bg-footer-secondary {
-    background-color: #11171d;
-  }
-  
+.project-link {
+  max-width: 100%;
+  width: 395px;
+  text-align: center;
+  display: inline-block;
+  padding: 0.6rem 1.2rem;
+  border-radius: 20px;
+  color: white;
+  text-decoration: underline;
+}
+
+.project-link:hover {
+  color: white;
+  background-color: greenyellow;
+}
+
+.project-link-desc {
+  width: 174px
+}
+
+.shadow {
+  box-shadow: 0 2rem 3rem rgb(0, 0, 0) !important;
+}
+
+.gallery {
+  cursor: pointer;
+  position: relative;
+  transition: .4s ease-in-out;
+}
+
+.gallery-overlay {
+  top: 0;
+  left: 0;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.589);
+  display: grid;
+  place-content: center;
+  opacity: 0;
+  transition: .4s ease-in-out;
+}
+
+.gallery:hover .gallery-overlay {
+  opacity: 1;
+}
+
+.gallery-button {
+  background-color: white;
+  border-radius: 30px;
+  font-size: 1.3rem;
+  padding: .4rem 1rem;
+  color: #000
+}
+
+.text-tech {
+  font-weight: 600;
+  font-size: 30px;
+}
+
+.text-laravel {
+  color: #ff2d20;
+}
+
+.text-spring {
+  color: #77bc1f;
+}
+
+.text-java {
+  color: #ea2d2e;
+}
+
+.text-mysql {
+  color: #e39410;
+}
+
+.text-postgresql {
+  color: #336791;
+}
+
+.text-django {
+  color: #092e20;
+}
+
+.text-php {
+  color: #222433;
+}
+
+.text-bootstrap {
+  color: #7912f6;
+}
+
+.text-html {
+  color: #ff5722;
+}
+
+.text-css {
+  color: #2196f3;
+}
+
+.text-js {
+  color: #f7e018;
+}
+
+.bg-footer {
+  background-color: #1e2833;
+  row-gap: 4rem;
+}
+
+.bg-footer-secondary {
+  background-color: #11171d;
+}
