--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,3 +1,4 @@
+
 html{
   box-sizing: border-box;
 }
@@ -6,7 +7,7 @@ html{
 }
 body {
   min-height: 100vh;
-  
+  font-family: 'Rajdhani', sans-serif;
 }
 
 img.img-profile {
@@ -34,7 +35,9 @@ img.img-profile {
   overflow: hidden;
   animation: typing 4s steps(22, end) forwards, blink .6s infinite;
 }
-
+.paragraph{
+  font-family: Arial, Helvetica, sans-serif;
+}
 @keyframes typing {
   0% {
     width: 0%;
