--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -321,8 +321,10 @@ img.img-profile {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.589);
-  display: grid;
-  place-content: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 1rem;
   opacity: 0;
   transition: .4s ease-in-out;
 }
@@ -333,8 +335,9 @@ img.img-profile {
 
 .gallery-button {
   background-color: white;
+  height: fit-content;
   border-radius: 30px;
-  font-size: 1.3rem;
+  font-size: 1rem;
   padding: .4rem 1rem;
   color: #000
 }
