--- a/src/assets/css/admin.css
+++ b/src/assets/css/admin.css
@@ -1,3 +1,7 @@
+:root{
+    --primary-color : #343a40;
+}
+
 .bg-gradient-login{
     background-image: linear-gradient(135deg,rgb(11, 11, 39),rgb(31, 28, 61));
 }
@@ -6,6 +10,25 @@
     min-height: 400px;
 }
 .center{
-    display: grid;
-    place-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.sidebar{
+    width: 250px;
+    background-color: var(--primary-color);
+}
+.main-navbar ul{
+    list-style: none;
+}
+.menu-item{
+    text-align: start;
+    transition: .3s ease-in-out;
+    cursor: pointer;
+}
+.menu-item:hover{
+    background-color: var(--bs-secondary);
+}
+.menu-item.active{
+    background-color: var(--bs-primary);
 }
