--- a/src/assets/css/admin.css
+++ b/src/assets/css/admin.css
@@ -1,7 +1,9 @@
 :root{
     --primary-color : #343a40;
 }
-
+.bg-green-light{
+    background-color: #28a745!important;
+}
 .bg-gradient-login{
     background-image: linear-gradient(135deg,rgb(11, 11, 39),rgb(31, 28, 61));
 }
@@ -41,4 +43,17 @@
 }
 .border-semi-light{
     border-color: rgb(92, 92, 92);
+}
+.summary-container{
+    gap: 12px;
+}
+.summary-box{
+    min-height: 142px;
+    min-width: 200px;
+}
+.summary-icon{
+    font-size: 80px;
+}
+.summary-value{
+    font-size: 50px;
 }
