--- a/src/assets/css/admin.css
+++ b/src/assets/css/admin.css
@@ -18,14 +18,28 @@
 }
 .sidebar{
     min-width: 250px;
-    transition: .4 ease-in-out;
-    margin-left: -250px;
+    transition: .4s ease-in-out;
+    z-index: 10000;
+    left: -250px;
+    position: absolute;
     background-color: var(--primary-color);
 }
 @media(min-width : 992px){
     .sidebar{
-        margin-left: 0;
+        position: relative;
+        height: 100%;
+        left: 0;
+        bottom: 0;
+        top: 0;
     }
+}
+.sidebar-fixed{
+    position: fixed;
+    width: 250px;
+    height: 100%;
+}
+.show-sidebar{
+    left: 0;
 }
 .title-sidebar{
     height: 62px;
@@ -54,8 +68,23 @@
         left: 250px!important;
     }
 }
+
+.shadow{
+    position: relative;
+}
+.shadow::before{
+    content: '';
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    background-color: rgba(56, 56, 56, 0.274);
+}
 .border-semi-light{
-    border-color: rgb(92, 92, 92);
+    border-bottom: 1px solid rgb(226, 226, 226);
+    box-shadow: -1px -5px 20px 0px rgb(66, 66, 66);
 }
 .summary-box{
     --box-height : 150px;
