--- a/src/assets/css/admin.css
+++ b/src/assets/css/admin.css
@@ -7,6 +7,17 @@
 .bg-gradient-login{
     background-image: linear-gradient(135deg,rgb(11, 11, 39),rgb(31, 28, 61));
 }
+.loading-screen{
+    content: '';
+    position: fixed;
+    z-index: 100000;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: #fff;
+}
+
 .login-container{
     width: 400px;
     min-height: 400px;
