--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -168,29 +168,18 @@ img.img-profile {
 
 .title-container {
   margin: 2rem 0;
-  background-image: url("../images/banner.jpg");
-  background-attachment: fixed;
-  height: 100%;
   position: relative;
+  border-bottom: 6px solid var(--bs-primary);
+  border-left: 6px solid var(--bs-primary);
+  width: 80%;
 }
 
-.title-container::before {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
-}
-
-.title {
-  color: #fff;
-  text-align: center;
-  padding: 10px;
-  border-left: 10px solid var(--bs-primary);
-  border-right: 10px solid var(--bs-primary);
+.title{
+  color: var(--bs-primary);
+  text-align: start;
+  padding: 0 0 4px 10px;
   position: relative;
+  margin: 0;
   z-index: 10;
 }
 
@@ -202,7 +191,7 @@ img.img-profile {
 
 .skill-img {
   width: fit-content;
-  height: 60px;
+  height: 40px;
   text-align: left;
 }
 
@@ -359,6 +348,7 @@ img.img-profile {
 
 .text-java {
   color: #ea2d2e;
+  font-weight: bolder;
 }
 
 .text-mysql {
@@ -392,7 +382,15 @@ img.img-profile {
 .text-js {
   color: #f7e018;
 }
-
+.text-postman{
+  color: #ff6c37;
+}
+.text-git{
+  color: #3e2e00;
+}
+.text-react{
+  color: #09cef2;
+}
 .bg-footer {
   background-color: rgb(24, 24, 40);
   row-gap: 2rem;
