--- a/src/assets/css/admin.css
+++ b/src/assets/css/admin.css
@@ -66,7 +66,7 @@
 .menu-item:hover{
     background-color: var(--bs-secondary);
 }
-.menu-item.active{
+.menu-item a.active{
     background-color: var(--bs-primary);
 }
 .top-navbar{
