--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -96,7 +96,17 @@ img.img-profile {
   width: 100%;
   height: 100%;
 }
-
+.btn-download-cv{
+  border-radius: 15px;
+  background-color: var(--bs-primary);
+  height: 40px;
+  padding: 5px 10px;
+  font-size: 16px;
+}
+.btn-download-cv i{
+  font-size: 24px;
+  margin-left: 3px;
+}
 .header-navbar {
   height: fit-content;
   width: 100%;
