--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -390,7 +390,7 @@ img.img-profile {
 }
 
 .text-js {
-  color: #f7e018;
+  color: #000000;
 }
 .text-postman{
   color: #ff6c37;
@@ -399,7 +399,7 @@ img.img-profile {
   color: #3e2e00;
 }
 .text-react{
-  color: #09cef2;
+  color: #000;
 }
 .bg-footer {
   background-color: rgb(24, 24, 40);
